Archive2/9a/e326e4f2a8ae31/output
+ clang++ -O3 -pedantic -Wall -Wextra -Wconversion -Wshadow -std=c++1y -pthread main.cpp
main.cpp:12:5: error: cannot initialize object parameter of type 'foo' with an expression of type 'foo'
    foo().bar1(); // doesn't compile because bar1() object is an lvalue
    ^~~~~
main.cpp:18:5: error: cannot initialize object parameter of type 'foo' with an expression of type 'foo'
    f.bar2();     // doesn't compile because bar1() object is an rvalue
    ^
2 errors generated.
